fix: spacing issues

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -53,7 +53,7 @@
   body {
     @apply bg-(--background-color) text-(--text-color) dark:bg-(--dark-background-color) dark:text-(--dark-text-color);
     @apply motion-safe:transition-all motion-safe:duration-300 motion-safe:ease-out;
-    @apply overflow-x-clip;
+    @apply overflow-x-hidden;
   }
 
   h1,
@@ -161,11 +161,11 @@
   }
 
   main.text-primary {
-    @apply md:w-2/3 lg:w-1/2;
+    @apply text-justify md:w-2/3 lg:w-1/2;
   }
 
   blockquote {
-    @apply my-1 rounded-l-(--default-radius) border-l-4 bg-(--background-blockquote-color) py-1 pl-2 italic dark:bg-(--dark-background-blockquote-color);
+    @apply my-1 rounded-(--default-radius) border-l-4 bg-(--background-blockquote-color) px-2 py-1 italic dark:bg-(--dark-background-blockquote-color);
   }
 
   .success {
